Fix loader animating behind breadcrumbs (#349)

--- a/administrator/components/com_media/resources/styles/components/_media-breadcrumb.scss
+++ b/administrator/components/com_media/resources/styles/components/_media-breadcrumb.scss
@@ -9,9 +9,6 @@
   & > li > a {
     cursor: pointer;
   }
-  // & > li:last-child a {
-  //   font-weight: bold;
-  // }
 }
 .breadcrumb-item {
   padding: 0 8px 0 22px;
@@ -21,7 +18,10 @@
     &:after {
       border-left-color: #fff;
     }
-  }  
+  }
+  &:hover {
+    color: #2E5A84;
+  }
 }
 .breadcrumb-item, .media-breadcrumb {
   position: relative;
