--- a/administrator/components/com_media/resources/styles/components/_media-toolbar.scss
+++ b/administrator/components/com_media/resources/styles/components/_media-toolbar.scss
@@ -24,6 +24,7 @@
 
 .media-loader {
 	position: absolute;
+	z-index: 10;
 	bottom: 0;
 	left: 0;
 	right: 100%;
